# visa_checker

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/issue_bodies/: 01_scaffolding.md  02_config.md  03_logging.md  04_slot_model.md  05_state.md  06_test_infra.md  07_browser_engine.md  08_human_behaviour.md  09_session_mgmt.md  10_proxy.md  11_captcha.md  12_fingerprint.md  13_base_scraper.md  14_vfs_scraper.md  15_tls_scraper.md  16_bls_scraper.md  17_capago_scraper.md  18_alert_dispatcher.md  19_telegram_alert.md  20_email_alert.md  21_ntfy_alert.md  22_sms_alert.md  23_scheduler.md  24_backoff.md  25_cli.md  26_dockerfile.md  27_compose.md  28_github_actions.md  30_discord_config.md  31_discord_adapter.md  32_wxpusher_config.md  33_wxpusher_adapter.md  34_wecom_config.md  35_wecom_adapter.md
config/: config.example.yaml
tests/: conftest.py
tests/adapters/: test_alert_dispatcher.py  test_config.py  test_proxy.py  test_state.py
tests/adapters/alerts/: test_discord.py  test_wechat_work.py  test_wxpusher.py
tests/application/: test_circuit_breaker.py
tests/domain/: test_models.py
visa_checker/adapters/alerts/: discord.py  email_channel.py  (+5 more)
visa_checker/application/: alert_dispatcher.py  circuit_breaker.py  factory.py  orchestrator.py
visa_checker/cli/: main.py
visa_checker/config/: settings.py
visa_checker/domain/: errors.py  logging.py  models.py
visa_checker/ports/: alert.py  browser.py  captcha.py  proxy.py  scraper.py  state.py
(+12 files in other folders)
