[project]
name = "visa-checker"
version = "0.1.0"
description = "Schengen visa slot monitor for UK residents"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "playwright-stealth>=1.0",
    "playwright-recaptcha>=0.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "click>=8.1",
    "loguru>=0.7",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "aiosmtplib>=3.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
visa-checker = "visa_checker.cli.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=visa_checker --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
